code changes reflecting input param changes to scripts