@@ -76,24 +76,23 @@ public class JBWS2528TestCase extends JBossWSTest
    @RunAsClient
    public void test() throws Exception
    {
+      // Check if security manager is to be used
+      Map<String, String> env = new HashMap<>();
+      String jbossModulesSecmgr = System.getProperty("jbossModulesSecmgr","");
+      if (!jbossModulesSecmgr.isEmpty())
+      {
+         jbossModulesSecmgr = jbossModulesSecmgr.replace('\n', ' ');
+         File policyFile = new File(JBossWSTestHelper.getTestResourcesDir()
+                 + "/jaxws/jbws2528/jbws2528-security.policy");
+         env.put("JAVA_OPTS", " -Djava.security.policy=" + policyFile.getCanonicalPath());
+      }
+
       File destDir = new File(TEST_DIR, "wsprovide" + FS + "java");
       String absOutput = destDir.getAbsolutePath();
-      String command = JBOSS_HOME + FS + "bin" + FS + "wsprovide" + EXT + " -k -w -o " + absOutput + " --classpath " + CLASSES_DIR + " " + ENDPOINT_CLASS;
+      String command = JBOSS_HOME + FS + "bin" + FS + "wsprovide" + EXT
+              + " " + jbossModulesSecmgr + " -k -w -o " + absOutput
+              + " --classpath " + CLASSES_DIR + " " + ENDPOINT_CLASS;
 
-      // wildfly9 security manager flag changed from -Djava.security.manager to -secmgr.
-      // Can't pass -secmgr arg through arquillian because it breaks arquillian's
-      // config of our tests.
-      // the -secmgr flag MUST be provided as an input arg to jboss-modules so it must
-      // come after the jboss-modules.jar ref.
-      String additionalJVMArgs = System.getProperty("additionalJvmArgs", "");
-      String securityManagerDesignator = additionalJVMArgs.replace("-Djava.security.manager", "-secmgr");
-
-
-      File policyFile = new File(JBossWSTestHelper.getTestResourcesDir() + "/jaxws/jbws2528/jbws2528-security.policy");
-      String securityPolicyFile = " -Djava.security.policy=" + policyFile.getCanonicalPath();
-
-      Map<String, String> env = new HashMap<>();
-      env.put("JAVA_OPTS", securityManagerDesignator + securityPolicyFile);
       executeCommand(command, null, "wsprovide", env);
 
       URL wsdlURL = new File(destDir, "JBWS2528EndpointService.wsdl").toURI().toURL();
